--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <ul id="listaTarefas"></ul>
 
 </body>
-><script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script rel="stylesheet" src="./script.js"></script>
 </html>
