--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <div class="container">
-    <h1>Lista de Tarefas</h1>
-    <p>Adicione suas tarefas!</p>
-    <div class="adicionarTarefas">
-            <input id="novaTarefa" type="text" placeholder="Adicione sua tarefa">
-            <button onclick="adicionarTarefa()" class="botao-1">+</button>
-            <button onclick="remover()" id="apagar-tarefas">Apagar Tarefas</button>
+        <h1>Lista de Tarefas</h1>
+        <p>Adicione suas tarefas!</p>
+        <div class="adicionarTarefas">
+                <input id="novaTarefa" type="text" placeholder="Adicione sua tarefa">
+                <button onclick="adicionarTarefa()" class="botao-1">+</button>
+                <button onclick="remover()" id="apagar-tarefas">Apagar Tarefas</button>
+        </div>
+        <p id="mensagem"></p>
+        <ul id="listaTarefas"></ul>
     </div>
-    <p id="mensagem"></p>
-    <ul id="listaTarefas"></ul>
-
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script rel="stylesheet" src="./script.js"></script>
